# GDG

./: .env.example  .gitignore  README.md  apphosting.yaml  cloudrun.env.yaml  firebase.json  firestore.rules  package.json  storage.rules
api/: .env.example  Dockerfile  pyproject.toml
api/app/: __init__.py  main.py
api/app/api/routes/: agents.py  ai.py  cases.py  dashboard.py  evals.py  incidents.py  lookups.py  operations.py  organizations.py
api/app/core/: config.py  dependencies.py  security.py
api/app/models/: __init__.py  domain.py
api/app/repositories/: base.py  firestore.py  memory.py
api/app/services/: agent_graphs.py  docling_parser.py  duplicates.py  extractor.py  geocoding.py  matching.py  ollama.py  routing.py  scoring.py  storage_bridge.py  tokens.py  vectors.py
api/scripts/: bootstrap_users.py  provision_operator.py
api/tests/: conftest.py  test_ai_provider.py  test_cases_flow.py  test_geocoding.py  test_incidents_and_imports.py  test_matching.py  test_organizations_and_agents.py  test_scoring.py
docs/: FRONTEND_BACKEND_CONNECTION.md  GEMINI_APP_HOSTING_DEPLOYMENT.md  PROJECT_GUIDE_A_TO_Z.md
docs/deployment/: google-cloud.md  local-firebase.md
eval/: run_eval.py
seed/: duplicate_pairs.json  org_invites.json  org_memberships.json  organizations.json  resources.json  seeded_cases.json  users.json  volunteers.json
test_inputs/: sample_assessment.docling.json  sample_assessment.docling.md  warehouse_photo.docling.json
web/: apphosting.yaml  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
web/src/lib/: api.ts  (+6 more)
(+69 files in other folders)
